# aoc

./: CMakeLists.txt  README.md
011/: main.cpp
021/: main.cpp
022/: main.cpp
031/: main.cpp
041/: main.cpp
042/: main.cpp
061/: main.cpp
062/: main.cpp
071/: main.cpp
072/: main.cpp
081/: main.cpp
082/: main.cpp
091/: main.cpp
092/: main.cpp
101/: main.cpp
102/: main.cpp
112/: .#main.cpp  main.cpp
122/: main.cpp
132/: main.cpp
141/: main.cpp
142/: main.cpp
162/: main.cpp
172/: main.cpp
181/: main.cpp
182/: main.cpp
191/: main.cpp
201/: main.cpp
2015/: CMakeLists.txt
2015/01/: main.cpp
2015/02/: main.cpp
2015/03/: main.cpp
2015/04/: main.cpp
2015/05/: main.cpp
2015/06/: main.cpp
2015/07/: main.cpp
2015/08/: main.cpp
2015/09/: main.cpp
2015/10/: main.cpp
2015/11/: main.cpp
2015/12/: main.cpp
2015/13/: main.cpp
2015/14/: main.cpp
2015/15/: main.cpp
2015/16/: main.cpp
2015/17/: main.cpp
2015/18/: main.cpp
2015/skel/: main.cpp
202/: main.cpp
2020/: CMakeLists.txt  README.md
2020/012/: main.cpp
2020/032/: main.cpp
2020/042/: main.cpp
2020/051/: main.cpp
2020/052/: main.cpp
2020/061/: main.cpp
2020/081/: main.cpp
2020/091/: main.cpp
2020/101/: main.cpp
2020/111/: main.cpp
2020/112/: main.cpp
2020/121/: main.cpp
2020/131/: main.cpp
211/: main.cpp
212/: main.cpp
222/: main.cpp
232/: main.cpp
241/: main.cpp
242/: main.cpp
common/: algorithm.h  dump.h  from_string.h  load_vector.h  max_a.h
include/: load_vector.h  max_a.h
skel/: main.cpp
(+29 files in other folders)
